syntax = "proto3";

package pb;

message U32Range {
  uint32 min = 1;
  uint32 max = 2;
}

message U64Range {
  uint64 min = 1;
  uint64 max = 2;
}